--- a/about/index.html
+++ b/about/index.html
@@ -526,11 +526,11 @@ var JETPACK_MU_WPCOM_SETTINGS = {"assetsUrl":"https:\/\/s1.wp.com\/wp-content\/m
 
 
 <div class="wp-block-buttons is-layout-flex wp-block-buttons-is-layout-flex">
-<div class="wp-block-button"><a class="wp-block-button__link wp-element-button" href="http://www.eva387.com/products/">Learn more</a></div>
+<div class="wp-block-button"><a class="wp-block-button__link wp-element-button" href="http://www.lighmed.com/products/">Learn more</a></div>
 
 
 
-<div class="wp-block-button is-style-outline is-style-outline--4"><a class="wp-block-button__link wp-element-button" href="http://www.eva387.com/contact/">Contact now</a></div>
+<div class="wp-block-button is-style-outline is-style-outline--4"><a class="wp-block-button__link wp-element-button" href="http://www.lighmed.com/contact/">Contact now</a></div>
 </div>
 </div>
 
